--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=tu_conexion_mongodb_atlas_o_otro_servicio
+MONGODB_URI=mongodb+srv://kampa3:Wereasd112@cluster0.3s9d0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
